GUVNOR-2815: DefaultValue offers items compatible with field data type